--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@
 			iframe.src = url
 			win.document.body.appendChild(iframe)
 		}
-			body {
-			background-color: #ffffff;
-			background-image: url(file:///home/chronos/u-8c1887a4d2e06c8cfe1e0972f9a8dbcbf3796186/MyFiles/Downloads/Screenshot%202023-11-29%2009.25.06.png);
-			background-repeat: no-repeat;
-			background-position: top left;
-			background-attachment: fixed;
-		}
-		}
 	</script>
 	</body>
+	body {
+	background-color: #ffffff;
+	background-image: url(file:///home/chronos/u-8c1887a4d2e06c8cfe1e0972f9a8dbcbf3796186/MyFiles/Downloads/Screenshot%202023-11-29%2009.25.06.png);
+	background-repeat: no-repeat;
+	background-position: top left;
+	background-attachment: fixed;
+	}
 	
-</html>
+</html>``
