--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 			iframe.src = url
 			win.document.body.appendChild(iframe)
 		}
-	</script>
 	</body>
 	body {
 	background-color: #ffffff;
@@ -31,4 +30,4 @@
 	background-attachment: fixed;
 	}
 	
-</html>``
+</html>
