--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ spotify</title>
 <meta name="keywords" content=" ">
 <meta name="description" content=" ">
 <style>
-body {file:///home/chronos/u-8c1887a4d2e06c8cfe1e0972f9a8dbcbf3796186/MyFiles/Downloads/Screenshot%202023-11-29%2009.25.06.png);background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
+body {file:///download.jpeg);background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
 h1{font-family:Arial, sans-serif;color:#000000;background-color:#ffffff;}
 p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#000000;background-color:#ffffff;}
 </style>
