--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
-<!DOCTYPE html>
-<html>
-<head>
-<!-- HTML Codes by Quackit.com -->
-<title>
-spotify</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="keywords" content=" ">
-<meta name="description" content=" ">
-<style>
-body {file:///download.jpeg);background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
-h1{font-family:Arial, sans-serif;color:#000000;background-color:#ffffff;}
-p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#000000;background-color:#ffffff;}
-</style>
-</head>
-<body>
-<h1> </h1>
-<p> </p>
-</body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<title>Google Classroom</title>
+	<link rel="shortcut icon" href="download.jpeg">
+	<button onclick="openGame()">Open Game</button>
+	<script>
+		function openGame() {
+			var win = window.open()
+			var url = "https://duckduckgo.com"
+			var iframe = win.document.createElement('iframe')
+			iframe.style.width = "100%";
+			iframe.style.height = "100%";
+			iframe.style.border = "none";
+			iframe.src = url
+			win.document.body.appendChild(iframe)
+		}
+	</script>
+	</body>
+	body {
+	background-color: #ffffff;
+	background-image: url(file:///home/chronos/u-8c1887a4d2e06c8cfe1e0972f9a8dbcbf3796186/MyFiles/Downloads/Screenshot%202023-11-29%2009.25.06.png);
+	background-repeat: no-repeat;
+	background-position: top left;
+	background-attachment: fixed;
+	}
+	
+</html>``
