--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script>
 		function openGame() {
 			var win = window.open()
-			var url = "https://duckduckgo.com"
+			var url = "https://bing.com"
 			var iframe = win.document.createElement('iframe')
 			iframe.style.width = "100%";
 			iframe.style.height = "100%";
